--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -31,6 +31,13 @@
   visibility: visible;
 }
 
+.empty {
+  text-align: center;
+  margin: 50px 0;
+  font-size: 25px;
+  color: var(--clr-danger);
+}
+
 @media (width >900px) {
   .banner {
     background-position: 20px 0;
