--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 10px;
   border-bottom: 1px solid var(--clr-text);
 }
 
@@ -23,15 +23,27 @@
   display: flex;
   align-items: center;
   list-style: none;
-  gap: 20px;
+  gap: 10px;
 }
 
 .menu a {
   color: var(--clr-text);
-  font-size: clamp(14px, 2vw, 16px);
+  font-size: clamp(10px, 2vw, 16px);
   font-size: var(--semibold);
 }
 
 .menu a.active {
   color: var(--clr-accent);
+}
+
+@media (width > 500px) {
+  .menu {
+    gap: 20px;
+  }
+}
+
+@media (width > 730px) {
+  .nav {
+    padding: 0 20px;
+  }
 }
